2003-01-04  Wakaba  <w@suika.fam.cx>

	* Util.pm (Message::Util::Wide::unquote_if_quoted_string): Give 's' option
	to 's'.

2002-11-13  Wakaba <w@suika.fam.cx>

	* Util.pm (%FMT2STR, sprintxf): Aliasnized.
	(Moved to new module Message::Util::Formatter.)
	* Util/: New directory.

2002-08-05  Wakaba <w@suika.fam.cx>

	* Util.pm:
	- (sprintxf): Use Message::Util::Wide::unquote_if_quoted_string
	instead of Message::Util::unquote_if_quoted_string.
	- (Message::Util::Wide): New package.
	- (%Message::Util::Wide::REG): New hash.
	- (Message::Util::unquote_if_quoted_string): New function.
	- NOTE: "Wide" package is created to support utf8 string
	of perl 5.7.3 or later.  Utf8 string does not work
	only for [\x00-\xFF] regex of current functions,
	and this regex is used as (?:.|\x0D|\x0A).  (Without
	's' option, "." does not match with newline character.)
	When we can do away problematic code from all
	Message::* modules, we can also do away "Wide" package.

2002-08-04  Wakaba <w@suika.fam.cx>

	* Entity.pm: Don't fill_source by default if format =~ http.

2002-08-01  Wakaba <w@suika.fam.cx>

	* Entity.pm (list_name, list_count): New methods.

2002-07-28  Wakaba <w@suika.fam.cx>

	* Entity.pm (destination, sender): New methods.
	* Tool.pm (escape_from, unescape_from): New functions.

2002-07-26  Wakaba <w@suika.fam.cx>

	* Entity.pm:
	- (fill_missing_fields): New option.
	- (fill_source, fill_destination): New options.
	- (hook_stringify_fill_fields): Option removed.
	* Header.pm:
	- (_header_cmp): Removed.
	- (@header_order, %header_order): Removed.
	- (_scan_sort): Use Message::Header::* namespace packages to sort.

2002-07-25  Wakaba <w@suika.fam.cx>

	* Tool.pm: New module.

2002-07-22  Wakaba <w@suika.fam.cx>

	* Util.pm: Some fix for new returned value style
	of Message::MIME::Charset.

2002-07-21  Wakaba <w@suika.fam.cx>

	* Entity.pm (import): New.

2002-07-20  Wakaba <w@suika.fam.cx>

	* Entity.pm (content_type): Guess media type: 