@@ -1,3 +1,7 @@
+2004-01-06  Wakaba  <wakaba@suika.fam.cx>
+
+	* Entity.pm (parse): Don't remove all "From"s within text when use_magic_line.
+
 2003-01-04  Wakaba  <w@suika.fam.cx>
 
 	* Util.pm (Message::Util::Wide::unquote_if_quoted_string): Give 's' option
